--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/utlis/userContext.js",
+    "src/utlis/AuthProvider.js"
+  ],
   "exclude": ["node_modules"]
 }
