--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "plaiceholder": "^3.0.0",
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "shadcn-ui": "^0.8.0",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uid": "^2.0.2",
