--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.323.0",
+    "mongoose": "^8.1.3",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "plaiceholder": "^3.0.0",
@@ -56,6 +57,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
