--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.4.1",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
+    "framer-motion": "^11.0.6",
     "lucide-react": "^0.323.0",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
