--- a/package.json
+++ b/package.json
@@ -36,16 +36,23 @@
     "axios": "^1.6.7",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.1",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.0.6",
+    "image-size": "^1.1.1",
     "lucide-react": "^0.323.0",
     "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "next": "14.1.0",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.2.1",
     "plaiceholder": "^3.0.0",
     "radix-ui": "^1.0.1",
@@ -54,11 +61,14 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
+    "react-image-file-resizer": "^0.4.8",
     "shadcn-ui": "^0.8.0",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uid": "^2.0.2",
+    "uniqid": "^5.4.0",
+    "util": "^0.12.5",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
