--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-connect": "^1.0.0",
     "next-themes": "^0.2.1",
     "plaiceholder": "^3.0.0",
+    "popmotion": "^11.0.5",
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
