--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.6.7",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "cloudinary": "^2.0.1",
     "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.0",
@@ -43,7 +44,7 @@
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
     "embla-carousel-autoplay": "^8.0.0-rc22",
-    "embla-carousel-react": "^8.0.0-rc22",
+    "embla-carousel-react": "^8.0.0",
     "formidable": "^3.5.1",
     "framer-motion": "^11.0.6",
     "image-size": "^1.1.1",
